--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "license": "ISC",
   "author": "Omar Garcia ommaarr05@gmail.com",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
