--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
