--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "css": "postcss public/css/tailwind.css -o public/css/app.css"
+    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
   },
   "dependencies": {
     "express": "^5.1.0",
