--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mysql2": "^3.14.4",
     "pug": "^3.0.3",
