--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "mysql2": "^3.14.4",
+    "nodemailer": "^7.0.6",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7"
   },
