--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.4",
     "nodemailer": "^7.0.6",
     "pug": "^3.0.3",
