--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch"
+    "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
+    "js": "webpack --watch"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -45,6 +46,8 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1"
   }
 }
