Ejecutando varios SCRIPTS al mismo tiempo

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
-    "js": "webpack --watch"
+    "js": "webpack --watch",
+    "dev": "concurrently \"npm run server\" \"npm run css\" \"npm run js\""
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
