--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
     "js": "webpack --watch",
     "dev": "concurrently \"npm run server\" \"npm run css\" \"npm run js\"",
-    "db:importar": "node ./seed/seeder.js -i"
+    "db:importar": "node ./seed/seeder.js -i",
+    "db:eliminar": "node ./seed/seeder.js -e"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
